prevented image cropping˝

--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -104,3 +104,19 @@ li:hover .remove-button {
   background-color: #f0f0f0; /* Color of the scrollbar track */
   border-radius: 10px; /* Rounded corners */
 }
+
+.favicon-background {
+  width: 30px;
+  min-width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: radial-gradient(
+    circle,
+    rgba(30, 30, 30, 1) 0%,
+    rgba(50, 50, 50, 1) 100%
+  );
+}
